package com.volunteer.platform.model;

public enum ProjectStatus {
    PENDING,
    APPROVED,
    REJECTED
}
