package com.volunteer.platform.model;

public enum Role {
    VOLUNTEER,
    ORGANIZER,
    ADMIN
}
